<resources>
    <string name="app_name">Personal Dairy</string>
    <string name="main_button">New Note</string>
    <string name="settings">Settings</string>
    <string name="userpass"> Enter Password</string>
    <string name="cpass"> Confirm password</string>
    <string name="signUp_text">No Account Yet?</string>
    <string name="click">click here</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="name">Full Name</string>
    <string name="Login_text">Already Have An Account?</string>
    <string name="save">Register</string>
    <string name="note">the title of the note</string>
    <string name="noteNew">Make Today\'s Entry .. Feel Free to Fully Express Yourself.</string>
    <string name="title">Enter Title</string>
</resources>
