<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context="com.dairy.successemmanuel.personaldairyy.accountActivity.SignUpActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="150dp"
        android:background="#fff"
        android:hint="@string/email"
        android:textColorHighlight="@android:color/holo_blue_light"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:hint="@string/name"
        android:textColorHighlight="@android:color/holo_blue_light"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:hint="@string/userpass"
        android:textColorHighlight="@android:color/holo_blue_light"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/cPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:hint="@string/cpass"
        android:textColorHighlight="@android:color/holo_blue_light"
        android:textColorHint="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/Login_text"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/text1"
            android:layout_toRightOf="@+id/text1"
            android:clickable="true"
            android:onClick="login"
            android:text="@string/click"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            android:textStyle="italic|bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/save" />
</LinearLayout>
