<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context="com.dairy.successemmanuel.personaldairyy.accountActivity.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="200dp"
        android:hint="@string/email"
        android:background="@android:color/white" />
    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/userpass"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:text="@string/signUp_text"
            android:textAllCaps="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:onClick="register"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:textColor="@android:color/holo_blue_light"
            android:layout_toRightOf="@+id/text1"
            android:layout_toEndOf="@+id/text1"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/login"
        android:layout_marginTop="16dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"/>

</LinearLayout>
